--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "object-assign": "^4.1.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react": "next",
+    "react-dom": "next",
     "prop-types": "^15.0.0"
   },
   "devDependencies": {
